@@ -1,3 +1,10 @@
+2019-10-24  Nathan Sidwell  <nathan@acm.org>
+
+	* pt.c (reduce_template_parm_level): Attach the new TPI to the new
+	DECL.
+	(convert_generic_types_to_packs): Pass the copied type to
+	reduce_templatE_parm_level.
+
 2019-10-23  Nathan Sidwell  <nathan@acm.org>
 
 	* cp-tree.c (CPTI_STD_IDENTIFIER): Delete.
